2008-10-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpegmuxer.h:
	* src/mpegmuxer.cpp:
		Return false if writing fails.

2008-06-14  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
		Improve ffmpeg/libswscale handling.
 
2008-06-14  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
	* install-sh:
	* makefile.in:
	* mkinstalldirs:
	* src/Makefile.in:
		New files.

2008-05-18  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/main.cpp:
		Use size_t instead of unsigned int.

2008-03-31  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix Windows build (patch by Ralph Glasstetter).

2008-03-24  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
	* src/avframe.h:
	* src/lavfmuxer.cpp:
	* src/lavfmuxer.h:
	* src/main.cpp:
	* src/stream.h:
	* src/streamdata.h:
		Yet another ffmpeg interface change.

2008-03-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/psfile.cpp:
		Add missing #include <cassert> (thanks, Wolfram).

2008-03-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/psfile.cpp:
		Mark audio streams in first pass, renumber in second.

2008-03-21  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
	* src/dvbcut.cpp:
		Windows compile fixes.
		
2008-03-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Accept 0x80 as legacy video descriptor tag.

2008-03-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Add hack for filenames with colons in them.

2008-03-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
		Always define __STDC_CONSTANT_MACROS and __STDC_LIMIT_MACROS.

	* src/buffer.cpp:
		Remove obsolete definition of __STDC_LIMIT_MACROS.

	* src/mpgfile.cpp:
	* src/psfile.cpp:
	* src/tsfile.cpp:
		Avoid stupid compiler warnings.

2008-02-17  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp: